<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:orientation="vertical" >
    
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingBottom="@dimen/activity_vertical_margin"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin"
		    android:paddingTop="@dimen/activity_vertical_margin"
		    android:orientation="vertical"
		    android:background="#000000"
		    tools:context=".MainActivity" >
		    
		    <ImageButton
		        android:id="@+id/RunawaysButton"
		        android:contentDescription="@string/desc_runaways"
		        android:layout_width="fill_parent"
		        android:layout_height="75dp"
		        android:layout_marginTop="5dp"
		        android:layout_marginBottom="5dp"
		        android:src="@drawable/runaways"
		        android:background="#000000"        
		        android:onClick="playRunaways" />
		    
		    <ImageButton
		        android:id="@+id/MrBrightside"
		        android:contentDescription="@string/desc_mrbrightside"
		        android:layout_width="fill_parent"
		        android:layout_height="75dp"
		        android:layout_marginTop="5dp"
		        android:layout_marginBottom="5dp"
		        android:src="@drawable/mrbrightside"
		        android:background="#000000" 
		        android:onClick="playMrBrightSide" />
		    
		    <ImageButton
		        android:id="@+id/WhenYouWereYoung"
		        android:contentDescription="@string/desc_whenyouwereyoung"
		        android:layout_width="fill_parent"
		        android:layout_height="75dp"
		        android:layout_marginTop="5dp"
		        android:layout_marginBottom="5dp"
		        android:src="@drawable/whenyouwereyoung"
		        android:background="#000000"
		        android:onClick="playWhenYouWereYoung" />
		    
		    <ImageButton
		        android:id="@+id/ReadMyMind"
		        android:contentDescription="@string/desc_readmymind"
		        android:layout_width="fill_parent"
		        android:layout_height="75dp"
		        android:layout_marginTop="5dp"
		        android:layout_marginBottom="5dp"
		        android:src="@drawable/readmymind"
		        android:background="#000000" 
		        android:onClick="playReadMyMind" />
		    
		    <ImageButton
		        android:id="@+id/SamsTown"
		        android:contentDescription="@string/desc_samstown"
		        android:layout_width="fill_parent"
		        android:layout_height="75dp"
		        android:layout_marginTop="5dp"
		        android:layout_marginBottom="5dp"
		        android:src="@drawable/samstown"
		        android:background="#000000"
		        android:onClick="playSamsTown" />
		    
		    <ImageButton
		        android:id="@+id/FleshAndBone"
		        android:contentDescription="@string/desc_fleshandbone"
		        android:layout_width="fill_parent"
		        android:layout_height="75dp"
		        android:layout_marginTop="5dp"
		        android:layout_marginBottom="5dp"
		        android:src="@drawable/fleshandbone"
		        android:background="#000000"
		        android:onClick="playFleshAndBone" />
		    
		    <ImageButton
		        android:id="@+id/ShadowPlay"
		        android:contentDescription="@string/desc_shadowplay"
		        android:layout_width="fill_parent"
		        android:layout_height="75dp"
		        android:layout_marginTop="5dp"
		        android:layout_marginBottom="5dp"
		        android:src="@drawable/shadowplay"
		        android:background="#000000"
		        android:onClick="playShadowPlay" />
		    
		    <ImageButton
		        android:id="@+id/Tranquilize"
		        android:contentDescription="@string/desc_tranquilize"
		        android:layout_width="fill_parent"
		        android:layout_height="75dp"
		        android:layout_marginTop="5dp"
		        android:layout_marginBottom="5dp"
		        android:src="@drawable/tranquilize"
		        android:background="#000000" 
		        android:onClick="playTranquilize" />
		    
		    <ImageButton
		        android:id="@+id/SomebodyToldMe"
		        android:contentDescription="@string/desc_somebodytoldme"
		        android:layout_width="fill_parent"
		        android:layout_height="75dp"
		        android:layout_marginTop="5dp"
		        android:layout_marginBottom="5dp"
		        android:src="@drawable/somebodytoldme"
		        android:background="#000000" 
		        android:onClick="playSomebodyToldMe" />
		    
		    <ImageButton
		        android:id="@+id/Human"
		        android:contentDescription="@string/desc_human"
		        android:layout_width="fill_parent"
		        android:layout_height="75dp"
		        android:layout_marginTop="5dp"
		        android:layout_marginBottom="5dp"
		        android:src="@drawable/human"
		        android:background="#000000" 
		        android:onClick="playHuman" />
	
	</LinearLayout>
	
</ScrollView>